modules/cli/src/test/resources/bad/reach/globals/gdo/Test06d.scr
module bad.reach.globals.gdo.Test06d;


global protocol Foo(role A, role B)
{
	choice at A
	{
		1() from A to B;
		do Foo(A, B);
	}
	or
	{
		do Bar(A, B);
		do Foo(A, B);
	}
}

global protocol Bar(role C, role D)
{
	5() from C to D;
	do Bar(C, D);
}

